# Housing-Price-Prediction--Regression--Sphinx--MlFlow--Docker

./: .gitignore  Dockerfile  README.md  driver.py  env.yml  ingest_data.py  log_config.py  nonstandardcode.py  pack_install-1.0-py3-none-any.whl  requirements.txt  run_dockerfile.py  score.py  train.py
data/output/: Prediction_output.csv
data/process/: test.csv
notebooks/: Housing_Price_Prediction.ipynb
package_install/: License  README.md  pyproject.toml  setup.py
package_install/docs/: README.md
package_install/docs/source/: conf.py  package_introduction.rst
package_install/src/pack_install/: find_installed_package.py
package_install/src/pack_install.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
package_install/tests/functional_tests/: test_installation.py
tests/functional_tests/: test_installation.py
tests/unit_tests/: test_ingest_data.py  test_score.py  test_train.py
