[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "pack_install_Var_pro21"
version = "0.0.1"
authors = [
  { name="Varsha Rajawat", email="varsha.rajawat@tigeranalytics.com" },
]
description = "This package tells if the given package is installed in your environment or not."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]